--- a/.github/Stash.Popup.Test/index.html
+++ b/.github/Stash.Popup.Test/index.html
@@ -146,6 +146,8 @@
         <button onclick="triggerExpand()">Expand</button>
         <button onclick="triggerCollapse()">Collapse</button>
         
+        <div style="height: 2000px; border-left: 1px solid #d0d0d0; margin: 20px 0;"></div>
+        
         <div id="status" class="status">Ready</div>
         <div id="theme-info" class="theme-info"></div>
     </div>
